mainimg float　表示はおかしいまま

--- a/assets/index.html
+++ b/assets/index.html
@@ -58,6 +58,8 @@ $(function(){
         </ul>
     </nav>
     </header>
+
+    <div class="imgarea">
         <section class="main_img">
          <ul class="bxslider">
               <li><img src="images/photo1.jpg" title="photo1"></li>
@@ -67,6 +69,10 @@ $(function(){
               <li><img src="images/photo5.jpg" title="photo5"></li>
          </ul>
          </section>
+        <section class="boad">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum officia ad soluta quas praesentium, voluptates distinctio dignissimos molestiae error ea nostrum corrupti, aut sit quis, ab necessitatibus aliquam a sed.
+        </section>
+     </div><!-- /imgarea -->
+
 
 <div class="contents">
     <main>
