--- a/assets/index.html
+++ b/assets/index.html
@@ -37,10 +37,13 @@ $(function(){
 });
 </script>
 </head>
-<div class="wrapper">
+
 <body class="index">
-    <header　class="header">
-        <h1 class="logo"><a href="index.html"><img src="画像" alt="ロゴ" class="logo"></a></h1>
+<div class="wrapper">
+    <header>
+        <h1 class="logo">
+        <a href="index.html"><img src="images/logo.jpg" alt="ロゴ"></a>
+        </h1>
         <ul class="util_nav">
             <li><a href="sitemap/index.html">サイトマップ</a></li>
             <li><a href="conpany/index.html">会社概要</a></li>
@@ -48,13 +51,13 @@ $(function(){
         </ul>
     <nav>
         <ul>
-            <li><a href="index.html">ホーム</a></li>
-            <li><a href="organic/index.html">有機栽培について</a></li>
-            <li><a href="event/index.html">てしごと・農業体験</a></li>
-            <li><a href="gardening/index.html">野菜の育て方</a></li>
-            <li><a href="recipi/index.html">LOHASなレシピ</a></li>
-            <li><a href="products/index.html">商品一覧</a></li>
-            <li><a href="contact/index.html">お問い合わせ</a></li>
+            <li　class="index"><a href="index.html">ホーム</a></li>
+            <li　class="organic"><a href="organic/index.html">有機栽培について</a></li>
+            <li　class="event"><a href="event/index.html">てしごと・農業体験</a></li>
+            <li　class="gardening"><a href="gardening/index.html">野菜の育て方</a></li>
+            <li　class="recipi"><a href="recipi/index.html">LOHASなレシピ</a></li>
+            <li　class="products"><a href="products/index.html">商品一覧</a></li>
+            <li　class="contact"><a href="contact/index.html">お問い合わせ</a></li>
         </ul>
     </nav>
     </header>
@@ -64,12 +67,12 @@ $(function(){
          <ul class="bxslider">
               <li><img src="images/photo1.jpg" title="photo1"></li>
               <li><img src="images/photo2.jpg" title="photo2"></li>
-              <li><img src="images/photo3.jpg" title="photo3"></li>
-              <li><img src="images/photo4.jpg" title="photo4"></li>
-              <li><img src="images/photo5.jpg" title="photo5"></li>
          </ul>
          </section>
-        <section class="boad">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum officia ad soluta quas praesentium, voluptates distinctio dignissimos molestiae error ea nostrum corrupti, aut sit quis, ab necessitatibus aliquam a sed.
+         <section class="boad">
+         <p>3月の旬野菜<br>
+            <a href="calender.html" class="calender">旬菜カレンダーを見る</a>
+         </p>
         </section>
      </div><!-- /imgarea -->
 
@@ -77,29 +80,46 @@ $(function(){
 <div class="contents">
     <main>
         <article class="news">
-            <dl>
-                <dt>2016-02-18</dt>
-                <dd>nt blanditiis labore repudiandae assumenda vel rerum fuga, non autem reiciendis consequatur.</dd>
-                <dt>2016-02-18</dt>
-                <dd>nt blanditiis labore repudiandae assumenda vel rerum fuga, non autem reiciendis consequatur.</dd>
-                <dt>2016-02-18</dt>
-                <dd>nt blanditiis labore repudiandae assumenda vel rerum fuga, non autem reiciendis consequatur.</dd>
+         <h2>News</h2>
+           <dl>
+                <dt>2016-03-22</dt>
+                <dd>農場での野菜栽培の様子を掲載しました。</dd>
+                <dt>2016-03-22</dt>
+                <dd>”LOHASなレシピ”に「自家製味噌の作り方」を追加しました。ご自宅で手作り味噌にチャレンジ！</dd>
+                <dt>2016-03-20</dt>
+                <dd>軽井沢のうのうカフェのサイトを開設しました。</dd>
             </dl>
-
+        </article>
+        <article class="blog">
+        <h2>野菜の栽培・収穫の様子</h2>
+            <p>
+            <figure>
+                <img src="images/vege/img_003.jpg" alt="">
+                <figcaption>日々の野菜栽培の様子や、手作り料理のアップなど</figcaption>
+            </figure>
+           </p>
         </article>
     </main>
-    <aside class="side">
 
+    <aside class="side">
+    <div class="bannerarea">書籍のご紹介
+        <img src="images/book01.jpg" alt="書籍紹介" class="banner01">
+        <img src="images/book02.jpg" alt="書籍紹介" class="banner02">
+        <img src="" alt="" class="banner03">
+        <img src="" alt="" class="banner04">
+    </div>
 
     </aside>
 </div><!-- /contents -->
 
-<footer class="footer">
-
-
-</footer>
 </div><!-- /wrapper -->
 
+    <wrapper class="footer">
+        <footer>
+        <span class="link">footerarea</span>
+
+        </footer>
+    </wrapper>
 
 </body>
 </html>
